--- a/package.json
+++ b/package.json
@@ -11,28 +11,40 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.12",
+    "@angular/material-moment-adapter": "^16.2.12",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@ngrx/store": "^16.3.0",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "moment": "^2.29.4",
+    "file-saver": "^2.0.5",
+    "ng-recaptcha": "^12.0.0",
+    "angularx-qrcode": "^16.0.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.3"
+    "tslib": "^2.6.2",
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.11",
-    "@angular/cli": "~16.2.11",
+    "@angular-devkit/build-angular": "^16.2.10",
+    "@angular/cli": "~16.2.10",
     "@angular/compiler-cli": "^16.2.12",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "^5.1.6"
   }
 }
