--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "commun/src/styles.scss"
             ],
             "scripts": []
           }
