Remplazo de commun a common

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/app/commun/assets",
+              "src/app/common/assets",
               "src/assets"
             ],
             "styles": [
@@ -110,5 +110,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
